Update .gitignore, application.properties, and ReservationService to enhance admin ID management